# sui-package-verify

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs
